[#1084] Fix jvm deprecation warnings (#1100)
* Add missing `--enable-native-access=ALL-UNNAMED` jvm args
* Upgrade errorprone, which pulled in the old guave version, which made
use of terminally deprecated methods

In addition, I investigated why we have to grant native-access to all
unnamed modules in the first place: After fitting the z3 bootstrap
dependency (see
[z3-gradle-plugin#2](https://github.com/rascmatt/z3-gradle-plugin/pull/2),
if you're interested) with a java module descriptor, it turned out that
you can only use it in a project which uses and declares a module
structure itself, which openvadl currently does not.

Closes #1084